# stm32U5A5JTxQ

./: README.md
cubemx/: .cproject  .mxproject  .project  cubemx.ioc  cubemx.launch  stm32u5au_cubemx.ioc
cubemx/Core/Inc/: main.h  stm32u5xx_hal_conf.h  stm32u5xx_it.h
cubemx/Core/Src/: main.c  stm32u5xx_hal_msp.c  stm32u5xx_it.c
cubemx/Debug/: cubemx.elf  cubemx.list  cubemx.map  makefile  objects.list
cubemx/stm32u5au_cubemx/: .cproject  .mxproject  .project
fimware/stm32U5A5JTxQ_mac/: CMakeLists.txt  build.ninja  cmake_install.cmake
fimware/stm32U5A5JTxQ_mac/Src/: main.c
fimware/stm32U5A5JTxQ_mac/cmake/: vscode_generated.cmake
fimware/stm32u5a_cmake/smt32u5a5/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake
firmware/stm32U5A5JTxQ_mac/: CMakeCache.txt  CMakeLists.txt
firmware/stm32U5A5JTxQ_mac/Src/: main.h
firmware/stm32U5A5JTxQ_mac/cmake/: vscode_generated.cmake
firmware/stm32u5a5/: CMakeLists.txt  build.ninja
firmware/stm32u5a5/Src/: main.c  main.cpp  main.h
firmware/stm32u5a5/cmake/: vscode_generated.cmake
firmware/stm32u5a5jtxq/: CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  stm32u5a5zjtxq_FLASH.ld
firmware/stm32u5a5jtxq/Src/: main.cpp
firmware/stm32u5a5jtxq/Startup/: startup_stm32u5a5zjtxq.s
stm32u5a5-cmake/: .cproject.bak  .mxproject  .project.bak  CMakeCache.txt  CMakeLists.txt  stm32u5a5-cmake.ioc
stm32u5a5-cmake/Core/Inc/: gpdma.h  stm32u5xx_hal_conf.h  stm32u5xx_it.h  tim.h  usb_otg.h
stm32u5a5-cmake/cmake/: gcc-arm-none-eabi.cmake
stm32u5a5-cmake/cmake/stm32cubemx/: CMakeLists.txt
(+120 files in other folders)
